Clojure Collector: fixed empty querystring in access-valve (#938)
Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
Clojure Collector: added support for API vendor and version in routing (#925)
Clojure Collector: added support for POST as well as GET (#654)
Scala Common Enrich: bumped to 0.6.0
Scala Common Enrich: added parsing of request body and content type for Clojure Collector raw events (#930) - TODO
Scala Common Enrich: updated EnrichmentManager to process JSON fields (#903)                                - TODO
Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                                 - TODO
Scala Hadoop Enrich: bumped to 0.7.0                                                                        - TODO
Scala Hadoop Enrich: bumped to Scala Common Enrich 0.6.0 (#940)                                             - TODO
Scala Hadoop Enrich: updated to support generating multiple enriched events from one raw payload (#902)     - TODO
StorageLoader: bumped to 0.3.2                                                                              - TODO
StorageLoader: removed EMPTYASNULL for loading JSONs (#942)                                                 - TODO
StorageLoader: wrote JSON Path file for mobile_context (#776)
Redshift: added Redshift DDL for mobile_context (#542)

Version 0.9.6 (2014-07-26)
--------------------------
Java Tracker: bumped git submodule to 0.4.0 (#892)
EmrEtlRunner: bumped to 0.9.0
EmrEtlRunner: passed etl_tstamp into Hadoop Enrich as an argument (#396)
EmrEtlRunner: removed enrichment-specific code (#811)
EmrEtlRunner: removed enrichment-specific parameters from config.yml.sample (#809)
EmrEtlRunner: replaced enrichment-specific arguments from EmrEtlRunner (#808)
EmrEtlRunner: removed %3D code following Scalding upgrade (#849)
EmrEtlRunner: fixed contract on partition_by_run (#894)
EmrEtlRunner: updated Bash script to support enrichments path (#916)