@@ -13,6 +13,7 @@ Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
 Clojure Collector: added support for API vendor and version in routing (#925)
 Clojure Collector: added support for POST as well as GET (#654)
 Scala Common Enrich: bumped to 0.6.0
+Scala Common Enrich: split out Clojure and CloudFront Collector event processing (#943)
 Scala Common Enrich: added parsing of request body and content type for Clojure Collector raw events (#930) - TODO
 Scala Common Enrich: updated EnrichmentManager to process JSON fields (#903)                                - TODO
 Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                                 - TODO
